# Yeader

./: .gitignore  .gitmodules  AGENTS.md  BUILD_SUCCESS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  PHILOSOPHY.md  PLUGIN_ROADMAP.md  QUICK_START.md  README.md  books-source.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
booksource/: 1776477015.json  1776479200.json
crates/yeader-backup/: Cargo.toml
crates/yeader-backup/src/: lib.rs
crates/yeader-crypto/: Cargo.toml
crates/yeader-crypto/src/: lib.rs
crates/yeader-descramble/: Cargo.toml
crates/yeader-descramble/src/: lib.rs
crates/yeader-http-util/: Cargo.toml
crates/yeader-http-util/src/: lib.rs
crates/yeader-library/: Cargo.toml
crates/yeader-library/src/: auth_repo.rs  book_group_repo.rs  book_repo.rs  bookmark_repo.rs  db.rs  lib.rs  repo.rs  source_registry.rs
crates/yeader-library/tests/: source_registry.rs
crates/yeader-models/: Cargo.toml
crates/yeader-models/src/: compatibility.rs  dev.rs  feed.rs  legacy.rs  lib.rs  library.rs  rule.rs  search.rs  source_format.rs
crates/yeader-net/: Cargo.toml
crates/yeader-net/examples/: test_client.rs  test_impersonate.rs
crates/yeader-net/src/: client.rs  encoding.rs  impersonate.rs  lib.rs  url_analyzer.rs
crates/yeader-net/tests/: client_test.rs  flow_test.rs  integration_test.rs
crates/yeader-protocol/: Cargo.toml
crates/yeader-protocol/src/: lib.rs
crates/yeader-reader/: Cargo.toml
crates/yeader-reader/src/: epub.rs  lib.rs  pipeline.rs  txt.rs
crates/yeader-rules/: Cargo.toml
crates/yeader-rules/src/: analyzer.rs  css.rs  js_engine.rs  json_path.rs  lib.rs  pipeline.rs  regex.rs  replace.rs  rule_parser.rs  rule_split.rs  xpath.rs
crates/yeader-rules/src/.omc/state/: last-tool-error.json
crates/yeader-runtime/: Cargo.toml
crates/yeader-runtime/src/: host.rs  lib.rs  registry.rs
crates/yeader-sdk/: Cargo.toml
crates/yeader-sdk/src/: error.rs  host.rs  lib.rs  model.rs  plugin.rs
docs/: DATA_SOVEREIGNTY.md  HTTP_CLIENT_FIX.md  PLAN_JSON_SOURCE_EXAMPLE.md  PLAN_JS_SOURCE_EXAMPLE.md  PLAN_PLUGIN_SOURCE_EXAMPLE.md  PLUGIN_SYSTEM.md  TROUBLESHOOTING_HTTP.md  YEADER_ATOM_EXTENSION.md  YEADER_SOURCE_FORMAT.md  code-review-2026-05-19.md
docs/superpowers/plans/: 2026-04-18-legado-full-parity.md  2026-04-18-legado-rust-rewrite-full-parity.md  2026-04-18-legado-rust-rewrite.md  2026-04-19-epub-enhancements.md  2026-04-19-epub-import-read-implementation.md
docs/superpowers/specs/: 2026-04-18-legado-rule-engine-full-parity-design.md  2026-04-19-dev-mode-logging-design.md  2026-04-19-epub-import-read-design.md
fixtures/legado/: README.md
fixtures/legado/backups/sample-backup/: bookSource.json  config.xml  custom-note.txt  readConfig.json  replaceRule.json  rssSources.json  shareReadConfig.json  themeConfig.json
fixtures/legado/rss/: sample-rss-source.json
fixtures/legado/rules/: full-book-source.json
fixtures/legado/sources/: sample-book-source.json
integration/so-novel/: config.ini  run-linux.sh  run-macos.sh
public/themes/: mintlify.css
scripts/: bump-version.sh  diagnose_http.sh  run_release.sh
sources/: 1024txt.com.json  czbooks.net.json
src/: App.tsx  api.test.ts  api.ts  app.ts  compatibility.ts  main.ts  main.tsx  node-test-shims.d.ts  query.ts  render.test.ts  render.ts  router.ts  styles.css  theme.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmark.rs  data.rs  lib.rs  logging.rs  main.rs  model.rs  state.rs  style.rs
src-tauri/src/commands/: auth.rs  backup.rs  dev.rs  feed.rs  integration.rs  library.rs  mod.rs  reader.rs  search.rs  sources.rs
src/auth/: appkit.ts  login.ts  session.test.ts  session.ts  types.ts
src/components/: AddSourceModal.tsx  NavBar.ts  NavBar.tsx  RssSourceList.tsx  Toast.ts
src/content/: pluginMarket.ts  sourceRegistry.ts  viewModels.test.ts  viewModels.ts
src/legacy/: LegacyPage.tsx
src/pages/: Account.ts  Account.tsx  Bookshelf.test.ts  Bookshelf.ts  BookshelfPage.tsx  DiscoverPage.tsx  ExplorePage.tsx  Integration.ts  Integration.tsx  Reader.css  Reader.ts  Search.test.ts  Search.ts  SearchPage.tsx  Settings.test.ts  Settings.ts  Settings.tsx  SoNovelConfig.ts  SoNovelConfig.tsx  SoNovelRules.ts  SoNovelRules.tsx  SoNovelWebui.ts  SoNovelWebui.tsx  SourceOps.ts  SourceOps.tsx  SourcePanels.tsx  SourceSearch.tsx  SourcesPage.tsx  integrationStatus.test.ts  integrationStatus.ts  soNovelConfigModel.test.ts  soNovelConfigModel.ts  soNovelRulesModel.test.ts  soNovelRulesModel.ts  useRssSources.ts  useYeaderSources.ts
src/pages/OnlineReader/: chapter.ts  chapter.tsx  index.ts  index.tsx
src/pages/Reader/: bookmarks.ts  chapter.ts  handlers.ts  index.ts  index.tsx  render.test.ts  render.ts  style.ts  types.ts
src/panels/: LeftPanel.tsx  MiddlePanel.tsx  RightPanel.tsx  SourcePanels.tsx  ThreePanelLayout.tsx
src/reader/: contentSource.ts  imageResolver.ts  onlineReader.ts
src/routing/: hashRoute.ts  matchRoute.ts
src/styles/: base.css  bookshelf.css  components.css  explore.css  index.css  integration-account.css  reader.css  search.css  settings.css  threepanel.css
src/themes/: apple.css  raycast.css
src/utils/: bookContentThemes.ts  chineseConvert.test.ts  chineseConvert.ts  themeManager.ts
src/views/: ArticleView.tsx  BookshelfView.tsx  ViewDispatcher.tsx  registry.ts  types.ts
