[package]
name = "yeader"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "yeader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
yeader-backup.workspace = true
yeader-library.workspace = true
yeader-models.workspace = true
yeader-net.workspace = true
yeader-protocol.workspace = true
yeader-reader.workspace = true
yeader-rules.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener.workspace = true
