[package]
name = "yeader"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "yeader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2.7.0"
tokio.workspace = true
tauri-plugin-shell.workspace = true
yeader-library.workspace = true
yeader-models.workspace = true
yeader-net.workspace = true
yeader-protocol.workspace = true
yeader-reader.workspace = true
yeader-rules.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener.workspace = true
