[package]
name = "yeader-net"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chardetng = "0.1"
encoding_rs = "0.8"
http = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
yeader-models = { workspace = true }
