[package]
name = "yeader-net"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chardetng = "0.1"
encoding_rs = "0.8"
http = "1"
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "json"] }
wreq = { version = "6.0.0-rc.28", default-features = false, features = ["webpki-roots", "cookies", "gzip", "brotli", "deflate", "charset"] }
wreq-util = { version = "3.0.0-rc.11" }
rhai = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
yeader-models = { workspace = true }
