[package]
name = "yeader-reader"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
yeader-library.workspace = true
yeader-models.workspace = true
yeader-rules.workspace = true
anyhow.workspace = true
chardetng = "0.1"
encoding_rs = "0.8"
regex.workspace = true
rbook = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
rbook = "0.7.5"
