[package]
name = "yeader-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yeader-sdk = { path = "../yeader-sdk" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
